# morvo

./: .gitignore  LICENSE  PROGRESS.md  README.md  build.gradle.kts  download.html  gradlew  gradlew.bat  index.html  key.html  premium.html  settings.gradle.kts  tutorial.html
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/libs/: .gitkeep
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/morvo/: MainActivity.kt  MorvoApp.kt  ScriptHubActivity.kt
app/src/main/java/com/morvo/injector/: InjectorBridge.kt  ProcessManager.kt
app/src/main/java/com/morvo/model/: RobloxGame.kt
app/src/main/java/com/morvo/network/: LicenseAPI.kt  ScriptRepo.kt
app/src/main/java/com/morvo/service/: OverlayService.kt
app/src/main/res/drawable/: fab_bg.xml
app/src/main/res/layout/: activity_game_hub.xml  activity_main.xml  activity_script_hub.xml  floating_overlay.xml  item_game.xml  item_script.xml  overlay_menu.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
docs/: ARCHITECTURE.md
frontend/: index.html  vercel.json
frontend/api/: proxy.js
landing/: bypass.html  index.html
native/: CMakeLists.txt
native/include/: hook.h  injector.h  luau.h
native/src/: main.c
native/src/bypass/: hyperion.c  integrity.c
native/src/hook/: arm32_hook.c  arm64_hook.c
native/src/injector/: mem_scan.c  proc_maps.c  ptrace_attach.c
native/src/luau/: execute.c  identity.c  luastate.c
scripts/games/: arsenal.lua  bladball.lua  bloxfruits.lua
scripts/universal/: aimbot.lua  autofarm.lua  esp.lua
server/api/: main.py
tools/: calibrate.py  dump_roblox.py  find_offsets.py  test_inject.sh
(+5 files in other folders)
